Objective-C GData Framework Release Notes

Project site:     http://code.google.com/p/gdata-objectivec-client/
Discussion group: http://groups.google.com/group/gdata-objectivec-client-framework

Changes since 1.8.0

Additions

- Added GDATA_INCLUDE compiler conditionals to specify which service's code
  should be built.

- Added service method to authenticate without fetching a feed or entry.

- Added Docs service v3 support, including the revision feed.

- Added convenience method for creating CCR elements from NSXMLElements.

- Added CCR extension support to Health register entry.

- Added epub accessors to Books API.

- Added block callback support to GDataHTTPFetcher

- Added sentData callback support to GDataHTTPFetcher on Snow Leopard and
  iPhone 3.0

- Added GDataAuthenticationFetcher, which can be used to create a fetcher
  for Google ClientLogin authentication, depending only on GDataHTTPFetcher.

- Added cookie storage method "none" to GDataHTTPFetcher to ignore all cookies.

- Added YouTube convenience accessors highQualityThumbnail and
  mediaContentWithFormatNumber:
  
- Added OCR and translation on upload to the DocsSample app.

- Added calendar query setShouldShowHiddenEvents: for displaying unanswered
  calendar invitations.

Changes

- Parsing is now done asynchronously (on another thread, via NSOperationQueue)
  and NSNotifications are sent when parsing begins and ends.

- Batch fetches now always disable shouldIgnoreUnknownXML so that the results
  in the batch feed can be used for updates.

- The shouldIgnoreXML flag is now settable in individual tickets.

- Made object properties dictionaries more KVO-compliant (thanks mtonkin)

- GDataHTTPFetcher dated data cache now is bounded in size (by default, 15 MB
  for Mac, 1 MB for iPhones) making it suitable for use on iPhones

- GDataHTTPFetcher now takes a GDataFetchHistory class rather than a mutable
  dictionary as the optional fetch history
